--- a/static/quiz-instruction.html
+++ b/static/quiz-instruction.html
@@ -275,7 +275,7 @@
                     <p class="text-gray-700 mb-6">Think of this as a learning practice, not an exam. No pressure, just growth. The more you do it, the better you'll get.</p>
                     
                     <div class="btn-container">
-                        <a href="quiz.html" class="start-quiz-btn">
+                        <a href="/quiz" class="start-quiz-btn">
                             Begin Challenge
                         </a>
                     </div>
@@ -295,10 +295,23 @@
                 // Get current URL parameters
                 const urlParams = new URLSearchParams(window.location.search);
                 
-                setTimeout(() => {
-                    // Preserve parameters when redirecting
-                    window.location.href = 'quiz.html' + (urlParams.toString() ? '?' + urlParams.toString() : '');
-                }, 300);
+                // Fetch to check if /quiz route is accessible
+                fetch('/quiz', { method: 'GET' })
+                    .then(res => {
+                        if (!res.ok) {
+                            throw new Error(`Failed to access quiz: ${res.status}`);
+                        }
+                        // Redirect to /quiz with parameters
+                        setTimeout(() => {
+                            window.location.href = '/quiz' + (urlParams.toString() ? '?' + urlParams.toString() : '');
+                        }, 300);
+                    })
+                    .catch(err => {
+                        console.error('Error accessing /quiz:', err);
+                        alert('Error loading quiz page. Please try again.');
+                        this.textContent = "Begin Challenge";
+                        this.style.backgroundColor = "#E91E63";
+                    });
             });
         });
     </script>
